# constant

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PRODUCT.md  README.md
.github/workflows/: ci.yml  release.yml
Formula/: constant.rb
legacy-node/: package-lock.json  package.json
legacy-node/src/: cli.js  fs-util.js  packet.js  redact.js
legacy-node/src/runtimes/: claude.js  codex.js
legacy-node/test/: codex-reader.test.js
packaging/homebrew/: constant.rb
scripts/: bump-version.sh  install.sh  update-homebrew-formula.sh
src/: explorer.rs  host.rs  live.rs  main.rs  picker.rs  runtime.rs  trail.rs  tui.rs
src/alembic/: LICENSE.transession  ir.rs  mod.rs  render.rs  sha256.rs
src/alembic/formats/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
tests/: cli.rs
