[package]
name = "constant"
version = "0.3.1"
edition = "2024"
rust-version = "1.94"
description = "Switch active agent CLIs mid-conversation without re-explaining the thread"
license = "MIT"
repository = "https://github.com/kennykankush/constant"
readme = "README.md"
keywords = ["cli", "terminal", "agents", "codex", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["clock", "serde"] }
crossterm = "0.29.0"
libc = "0.2"
portable-pty = "0.9.0"
regex = "1.12.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
uuid = { version = "1.23.2", features = ["v4", "v7", "serde"] }
